# lastAgent

./: .env.example  DEPLOY.md  Dockerfile  PROJECT_BRIEF.md  README.md  STATUS_REPORT.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.seedgpt/: PRD.yml  agile-tdd-method.md  execution-contract.md  feature-full-cycle.md  full-qa-cycle.md  integration-guide.yml  org-chart.yml  roadmap.yml  tech-stack.yml
.seedgpt/bugs/: agents.md
.seedgpt/features/: agents.md
.seedgpt/minor-improvements/: agents.md
.seedgpt/sprints/: sprint-v1.0-foundation.yml  sprint-v2.0-council-selection.yml  sprint-v3.0-full-mesh.yml  sprint-v4.0-human-controls.yml  sprint-v5.0-api-ui.yml  sprint-v6.0-agile-tdd.yml  sprint-v7.0-deploy-cicd.yml  sprint-v8.0-observability.yml  sprint-v8.1-logging-instrumentation.yml  sprint-v9.0-cli-enhancement.yml  sprint-v9.1-interactive-repl.yml  sprint-v9.2-mcp-server.yml  (+1 more)
api/: __init__.py
api/routes/: chat.py  (+3 more)
cli/: __init__.py  __main__.py  app.py
config/: __init__.py  agents.yml  capabilities.yml  council.yml  settings.yml
docs/: INTEGRATIONS.md  README.md  STATUS_REPORT.md
src/: __init__.py  agent_awareness.py  agent_matcher.py  approvals.py  config.py  council_selector.py  decision_log.py  executor.py  feedback.py  mesh.py  orchestrator.py  task_analyzer.py  workflow.py
tests/: __init__.py  test_agent_matcher.py  test_api.py  test_awareness.py  test_config.py  test_council_selector.py  test_executor.py  test_human_controls.py  test_mesh.py  test_observability.py  test_orchestrator.py  test_task_analyzer.py  test_workflow.py
(+14 files in other folders)
